# modern-cmake-for-cpp-2ed-note

./: README.md
ch15_comment/: CMakeLists.txt
ch15_comment/cmake/: BuildInfo.cmake  Coverage.cmake  CppCheck.cmake  Doxygen.cmake  Format.cmake  GetFTXUI.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  Packaging.cmake  Testing.cmake
ch15_comment/src/calc/: CMakeLists.txt  CalcConfig.cmake  basic.cpp
ch15_comment/src/calc/include/calc/: basic.h
ch15_comment/src/calc_console/: CMakeLists.txt  bootstrap.cpp  tui.cpp
ch15_comment/src/calc_console/include/: tui.h
ch15_comment/test/: CMakeLists.txt
ch15_comment/test/calc/: CMakeLists.txt  basic_test.cpp
ch15_comment/test/calc_console/: CMakeLists.txt  tui_test.cpp
note/: README.md
